apps/umami/install/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: umami
  namespace: umami
  labels:
    app: umami
    app.kubernetes.io/name: umami
    app.kubernetes.io/part-of: umami
    app.kubernetes.io/instance: umami
    app.kubernetes.io/component: umami
spec:
  selector:
    app: umami
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
